--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag geeks5olution/elixir_rust:$(date +%s)
+    - name: Docker Login
+      uses: docker/login-action@v1.10.0
+      with:
+        # Username used to log against the Docker registry
+        username: geeks5olutions
+        # Password or personal access token used to log against the Docker registry
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Docker Push
+      run: docker image push geeks5olutions/elixir_rust:$(date +%s)
+
